# eugene-data-labs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PROJECT_STATE.json  README.md  RESUME.md  ROADMAP.md  aapl_credit.json  aapl_equity.json  aapl_health.json  aapl_health2.json  aapl_health_new.json  add_earnings_tools.py  add_equity_tools.py  api_server.py  app.py  apple_extraction.json  ba_health.json  ba_health2.json  ba_xbrl.json  bank_comparison.json  cli.py  docker-compose.yml  eugene_cli.py  eugene_server.py  gradio_app.py  jpm_credit.json  jpm_equity.json  jpm_equity2.json  jpm_xbrl.json  mcp_server.py  merge_guide.md  pyproject.toml  railway.toml  requirements.txt  run.sh  session_state.py  (+1 more)
.claude/: launch.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agents/: credit_monitor.py  equity_research.py
api/: __init__.py  main.py
data/alerts/: alerts.json
data/extractions/: AAPL_mock.json  AMZN_mock.json  BRK.A_mock.json  GOOGL_mock.json  JPM_mock.json  META_mock.json  MSFT_mock.json  NVDA_mock.json  TSLA_mock.json  TSLA_mock_20260131_115649.json  WMT_mock.json
data/profiles/: TSLA_profile.json
data/samples/: aapl_10k_2023.json  amd_10k_2023.json  amzn_10k_2023.json  bac_10k_2023.json  brk_10k_2023.json  brk_a_10k_2023.json  crm_10k_2023.json  csco_10k_2023.json  cvx_10k_2023.json  dis_10k_2023.json  googl_10k_2023.json  hd_10k_2023.json  intc_10k_2023.json  jnj_10k_2023.json  jpm_10k_2023.json  ko_10k_2023.json  ma_10k_2023.json  meta_10k_2023.json  msft_10k_2023.json  nflx_10k_2023.json  nvda_10k_2023.json  nvda_10k_2024.json  orcl_10k_2023.json  pfe_10k_2023.json  pg_10k_2023.json  t_10k_2023.json  tsla_10k_2023.json  unh_10k_2023.json  v_10k_2023.json  vz_10k_2023.json  wmt_10k_2023.json  wmt_10k_2024.json  xom_10k_2023.json
data/sessions/: resume_prompt.md
data/watchlist/: companies.json
db/: models.py
eugene/: __main__.py  apikeys.py  auth.py  cache.py  cli.py  concepts.py  config.py  db.py  debate.py  email_briefs.py  endpoint_limiter.py  errors.py  formatter.py  llm.py  monitoring.py  openapi.py  rate_limit.py  research.py  resolver.py  router.py  simulation.py  usage.py  user_auth.py
eugene/agents/: credit.py  earnings.py  equity.py  equity_research.py  health.py
eugene/alerts/: __init__.py  channels.py
eugene/core/: fetcher.py  response.py
eugene/extraction/: llm.py
eugene/extraction/parsers/: employees.py
eugene/handlers/: concepts_raw.py  corporate_actions.py  events.py  exhibits.py  export.py  filings.py  financials.py  float_data.py  insiders.py  metrics.py  news.py  ohlcv.py  options.py  orderbook.py  ownership.py  peers.py  predictions.py  profile.py  sections.py  segments.py  technicals.py  transcripts.py
eugene/inference/: __init__.py  client.py  modal_app.py
eugene/mcp_server/: __init__.py  __main__.py
eugene/models/: base.py  sources.py
eugene/ontology/: __init__.py  edges.py  entities.py  ingest.py  schema.py  signals.py
eugene/sources/: bulk.py  chokepoint_impact.py  conflict.py  disasters.py  edgar.py  emerging_markets.py  firecrawl.py  flights.py  fmp.py  fred.py  gdelt.py  government.py  holdings_13f.py  insider.py  nasa_gibs.py  parser.py  predictions.py  private_credit.py  realtime.py  sanctions.py  sec_api.py  sec_regulatory.py  supply_chain.py  thirteen_f.py  transcripts.py  validator.py  xbrl.py  yahoo.py
eugene/tools/: __init__.py  consolidated_tools.py  institutional.py  mcp_tools.py
eugene/validation/: engine.py  financial.py
eugene/workers/: __init__.py  celery_app.py  tasks.py
eugene/world/: __init__.py  conflict_intel.py  convergence.py  delta.py  disasters_intel.py  flights_intel.py  health.py  news.py  research_intel.py  sanctions_intel.py  supply_chain_intel.py
evaluation/: evals.py
extraction/: edgar.py  fiscal.py  formatter.py  safe_extract.py  validation.py
extraction/parsers/: capex.py  debt.py  earnings.py  form13d.py  form13f.py  form13g.py  form3.py  form4.py  form5.py  form8k.py  macro.py
frontend/: .env.development  .env.example  .env.production  .env.staging  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/__tests__/: App.test.tsx  FeedbackWidget.test.tsx  ResearchBrief.test.tsx  SearchInput.test.tsx  useConvergenceScore.test.ts
frontend/src/contexts/: AuthContext.tsx
jobs/: extract_batch.py  resilient_runner.py
mcp/: mcp_server.py  mcp_server_old.py  server.py  server_wrapper.py  simple_server.py
monitoring/: health.py
realtime/: sec_monitor.py
scripts/: add_new_tools.py  build_hf_dataset.py  generate_samples.py  install_rebuild.py  run_all_mocks.py
skills/credit/: COVENANT_MONITORING.md  SKILL.md
static/: index.html
storage/: data_store.py
tests/: conftest.py  test_architecture.py  test_async.py  test_auth.py  test_cache.py  test_cli.py  test_config.py  test_disk_cache.py  test_errors.py  test_extraction.py  test_financials.py  test_fmp.py  test_formatter.py  test_fred.py  test_handlers_fmp.py  test_handlers_misc.py  test_handlers_sec.py  test_insiders.py  test_metrics.py  test_mock_api.py  test_offline.py  test_ontology.py  test_peers.py  test_rate_limit.py  test_resolver.py  test_router.py  test_sec_api.py  test_server.py  test_technicals.py  test_transcripts.py  test_usage.py  test_user_auth.py  test_validation.py
web/: index.html
(+185 files in other folders)
