[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eugene-intelligence"
version = "0.3.0"
description = "Financial context for AI. The data layer for agents that need to get finance right."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Matthew Anyiam", email = "matthew@eugeneintelligence.com" }]
dependencies = [
  "requests>=2.28.0",
  "fredapi>=0.5.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.20.0",
  "mcp>=0.1.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["finance", "sec", "xbrl", "fred", "mcp", "api", "ai-agents", "financial-data"]

[project.urls]
Homepage = "https://github.com/Matthew-Anyiam/eugene-data-labs"
Documentation = "https://eugene-data-labs-production.up.railway.app/"
Demo = "https://huggingface.co/spaces/Rex165/eugene-intelligence"
