[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eugene-intelligence"
version = "0.8.1"
description = "Financial context for AI. The data layer for agents that need to get finance right."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Matthew Anyiam", email = "matthew@eugeneintelligence.com" }]
dependencies = [
  "requests>=2.28.0,<3",
  "fredapi>=0.5.0,<1",
  "fastapi>=0.100.0,<1",
  "uvicorn>=0.20.0,<1",
  "mcp>=0.1.0,<2",
  "click>=8.0.0,<9",
  "python-dotenv>=1.0.0,<2",
  "httpx>=0.24,<1",
  "rich>=13.0,<15",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["finance", "sec", "xbrl", "fred", "mcp", "api", "ai-agents", "financial-data"]

[project.optional-dependencies]
test = [
  "pytest>=7.0,<9",
  "pytest-cov>=4.0,<6",
  "pytest-asyncio>=0.21,<1",
  "httpx>=0.24,<1",
  "ruff>=0.4,<1",
]

[project.scripts]
eugene = "eugene.cli:main"

[project.urls]
Homepage = "https://github.com/Matthew-Anyiam/eugene-data-labs"
Documentation = "https://eugene-data-labs-production.up.railway.app/"
Demo = "https://huggingface.co/spaces/Rex165/eugene-intelligence"

[tool.setuptools.packages.find]
include = ["eugene*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".claude", "eugene-intelligence"]

[tool.ruff.lint]
ignore = ["E402"]
