[package]
name = "eugene-desktop"
version = "0.1.0"
description = "Eugene Intelligence - Financial Knowledge Workspace"
authors = ["Eugene Intelligence"]
edition = "2021"

[lib]
name = "eugene_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = { version = "2", features = ["xdg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
